src/components/Header/styles/Header.module.scss
.header {
  position: sticky;
  top: 0;
  z-index: 3;

  .topBar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 80px;
    background-color: whitesmoke;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

    img {
      position: relative;
      z-index: 1;
      width: 150px;
      margin-left: 30px;
      cursor: pointer;
    }

    .topLinks {
      display: none;

      @media screen and (min-width: 1124px) {
        display: flex;
      }
    }
  }

  .lateralBar {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 90;
    width: 0%;
    height: 100vh;
    background-color: whitesmoke;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 15px;
    transition: 0.3s;
    overflow: hidden;

    img {
      width: 100px;
    }
  }
  .extended {
    width: 100%;
  }
}

